integracion con firebase shop e items listo

--- a/src/components/CardItem/index.css
+++ b/src/components/CardItem/index.css
@@ -3,10 +3,7 @@
 .card_item {
     position: relative;
     margin: 0 40px 40px 0;
-}
-
-.card_item:hover{
-    cursor: pointer;
+    color: #333333;
 }
 
 .card_item > p {
