--- a/src/components/Searchbar/index.css
+++ b/src/components/Searchbar/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+
 #searchbar > div {
     padding: 7px 0;
 }
@@ -16,53 +17,30 @@
 
 }
 
-#price {
+#search {
     display: flex;
-    justify-content: space-between;
-}
-
-#price input {
-    width: 30px;
-    height: 14px;
-    text-align: center;
-}
-
-#price input[type=number]::-webkit-inner-spin-button,
-#price input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-#filter {
-    display: flex;
-}
-
-#filter div {
-    display: flex;
-    flex-direction: column;
-}
-
-#filter input {
-    margin: 5px 0;
-    font-weight: 500;
-}
-
-#filter label {
-    padding: 3px 5px;
-    font-size: 14px;
+    align-items: center;
 }
 
 #search input, #order select {
-    border-radius: 4px;
+    border-radius: 10px;
     border: 1px solid black;
     padding: 5px 10px;
     width: 171px;
 }
 
 #search input {
-    width: 150px;
+    width: 200px;
+    height: 30px;
 }
 
-input:focus, #order select:focus{
+input:focus{
     outline: none;
+}
+
+@media (min-width: 800px){
+    #search input {
+        width: 360px;
+        height: 30px;
+    }
 }
